Adicionando ícones na div header

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle-PtBR</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="programa-principal">
 
         <div id="header">
             <div class="como-jogar">
-
+                <i class="fa-solid fa-question"></i>
             </div>
 
 
@@ -21,9 +22,8 @@
 
 
             <div class="config">
-
+                <i class="fa-solid fa-gear"></i>
             </div>
-            <hr>
         </div>
 
         <div id="jogo">
