HTML do teclado virtual criado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div id="header">
             <div class="como-jogar">
-                <i class="fa-solid fa-question"></i>
+                <i class="fa-solid fa-lg fa-question"></i>
             </div>
 
 
@@ -22,7 +22,7 @@
 
 
             <div class="config">
-                <i class="fa-solid fa-gear"></i>
+                <i class="fa-solid fa-lg fa-gear"></i>
             </div>
         </div>
 
@@ -67,7 +67,45 @@
         </div>
 
         <div id="teclado">
-            <h1>Aqui ficará o teclado</h1>
+            <!-- Linha 1 -->
+            <div class="row">
+                <div class="key">Q</div>
+                <div class="key">W</div>
+                <div class="key">E</div>
+                <div class="key">R</div>
+                <div class="key">T</div>
+                <div class="key">Y</div>
+                <div class="key">U</div>
+                <div class="key">I</div>
+                <div class="key">O</div>
+                <div class="key">P</div>
+            </div>
+        
+            <!-- Linha 2 -->
+            <div class="row">
+                <div class="key">A</div>
+                <div class="key">S</div>
+                <div class="key">D</div>
+                <div class="key">F</div>
+                <div class="key">G</div>
+                <div class="key">H</div>
+                <div class="key">J</div>
+                <div class="key">K</div>
+                <div class="key">L</div>
+                <div class="key wide">⌫</div>
+            </div>
+        
+            <!-- Linha 3 -->
+            <div class="row">
+                <div class="key">Z</div>
+                <div class="key">X</div>
+                <div class="key">C</div>
+                <div class="key">V</div>
+                <div class="key">B</div>
+                <div class="key">N</div>
+                <div class="key">M</div>
+                <div class="key wide">ENTER</div>
+            </div>
         </div>
 
     </div>
