Som do teclado adicionado

--- a/index.html
+++ b/index.html
@@ -108,16 +108,8 @@
             </div>
         </div>
 
-        <!-- Som do teclado -->
-        <script>
-            function playKeyboardSound()
-            {
-                var audio = new Audio("./Audio/MarcosVinicius.mp3");
-                audio.play();
-            }
-
-            document.addEventListener("keydown", playKeyboardSound);
-        </script>
+        <!-- Som do teclado-->
+        <script src="./JavaScript/keyboardSound.js"></script>
     </div>
 </body>
 </html>
