Tocar som de teclado ao apertar botões do html

--- a/index.html
+++ b/index.html
@@ -69,42 +69,42 @@
         <div id="teclado">
             <!-- Linha 1 -->
             <div class="row">
-                <div class="key">Q</div>
-                <div class="key">W</div>
-                <div class="key">E</div>
-                <div class="key">R</div>
-                <div class="key">T</div>
-                <div class="key">Y</div>
-                <div class="key">U</div>
-                <div class="key">I</div>
-                <div class="key">O</div>
-                <div class="key">P</div>
+                <div class="key" onclick="playKeyboardSound()">Q</div>
+                <div class="key" onclick="playKeyboardSound()">W</div>
+                <div class="key" onclick="playKeyboardSound()">E</div>
+                <div class="key" onclick="playKeyboardSound()">R</div>
+                <div class="key" onclick="playKeyboardSound()">T</div>
+                <div class="key" onclick="playKeyboardSound()">Y</div>
+                <div class="key" onclick="playKeyboardSound()">U</div>
+                <div class="key" onclick="playKeyboardSound()">I</div>
+                <div class="key" onclick="playKeyboardSound()">O</div>
+                <div class="key" onclick="playKeyboardSound()">P</div>
             </div>
         
             <!-- Linha 2 -->
             <div class="row">
-                <div class="key">A</div>
-                <div class="key">S</div>
-                <div class="key">D</div>
-                <div class="key">F</div>
-                <div class="key">G</div>
-                <div class="key">H</div>
-                <div class="key">J</div>
-                <div class="key">K</div>
-                <div class="key">L</div>
-                <div class="key wide">⌫</div>
+                <div class="key" onclick="playKeyboardSound()">A</div>
+                <div class="key" onclick="playKeyboardSound()">S</div>
+                <div class="key" onclick="playKeyboardSound()">D</div>
+                <div class="key" onclick="playKeyboardSound()">F</div>
+                <div class="key" onclick="playKeyboardSound()">G</div>
+                <div class="key" onclick="playKeyboardSound()">H</div>
+                <div class="key" onclick="playKeyboardSound()">J</div>
+                <div class="key" onclick="playKeyboardSound()">K</div>
+                <div class="key" onclick="playKeyboardSound()">L</div>
+                <div class="key wide" onclick="playKeyboardSound()">⌫</div>
             </div>
         
             <!-- Linha 3 -->
             <div class="row">
-                <div class="key">Z</div>
-                <div class="key">X</div>
-                <div class="key">C</div>
-                <div class="key">V</div>
-                <div class="key">B</div>
-                <div class="key">N</div>
-                <div class="key">M</div>
-                <div class="key wide">ENTER</div>
+                <div class="key" onclick="playKeyboardSound()">Z</div>
+                <div class="key" onclick="playKeyboardSound()">X</div>
+                <div class="key" onclick="playKeyboardSound()">C</div>
+                <div class="key" onclick="playKeyboardSound()">V</div>
+                <div class="key" onclick="playKeyboardSound()">B</div>
+                <div class="key" onclick="playKeyboardSound()">N</div>
+                <div class="key" onclick="playKeyboardSound()">M</div>
+                <div class="key wide" onclick="playKeyboardSound()">ENTER</div>
             </div>
         </div>
 
