Separando funções do JS

--- a/index.html
+++ b/index.html
@@ -69,47 +69,52 @@
         <div id="teclado">
             <!-- Linha 1 -->
             <div class="row">
-                <div class="key" onclick="playKeyboardSound()">Q</div>
-                <div class="key" onclick="playKeyboardSound()">W</div>
-                <div class="key" onclick="playKeyboardSound()">E</div>
-                <div class="key" onclick="playKeyboardSound()">R</div>
-                <div class="key" onclick="playKeyboardSound()">T</div>
-                <div class="key" onclick="playKeyboardSound()">Y</div>
-                <div class="key" onclick="playKeyboardSound()">U</div>
-                <div class="key" onclick="playKeyboardSound()">I</div>
-                <div class="key" onclick="playKeyboardSound()">O</div>
-                <div class="key" onclick="playKeyboardSound()">P</div>
+                <div class="key" onclick="somTecla()">Q</div>
+                <div class="key" onclick="somTecla()">W</div>
+                <div class="key" onclick="somTecla()">E</div>
+                <div class="key" onclick="somTecla()">R</div>
+                <div class="key" onclick="somTecla()">T</div>
+                <div class="key" onclick="somTecla()">Y</div>
+                <div class="key" onclick="somTecla()">U</div>
+                <div class="key" onclick="somTecla()">I</div>
+                <div class="key" onclick="somTecla()">O</div>
+                <div class="key" onclick="somTecla()">P</div>
             </div>
         
             <!-- Linha 2 -->
             <div class="row">
-                <div class="key" onclick="playKeyboardSound()">A</div>
-                <div class="key" onclick="playKeyboardSound()">S</div>
-                <div class="key" onclick="playKeyboardSound()">D</div>
-                <div class="key" onclick="playKeyboardSound()">F</div>
-                <div class="key" onclick="playKeyboardSound()">G</div>
-                <div class="key" onclick="playKeyboardSound()">H</div>
-                <div class="key" onclick="playKeyboardSound()">J</div>
-                <div class="key" onclick="playKeyboardSound()">K</div>
-                <div class="key" onclick="playKeyboardSound()">L</div>
-                <div class="key wide" onclick="playKeyboardSound()">⌫</div>
+                <div class="key" onclick="somTecla()">A</div>
+                <div class="key" onclick="somTecla()">S</div>
+                <div class="key" onclick="somTecla()">D</div>
+                <div class="key" onclick="somTecla()">F</div>
+                <div class="key" onclick="somTecla()">G</div>
+                <div class="key" onclick="somTecla()">H</div>
+                <div class="key" onclick="somTecla()">J</div>
+                <div class="key" onclick="somTecla()">K</div>
+                <div class="key" onclick="somTecla()">L</div>
+                <div class="key wide" onclick="somTecla()">⌫</div>
             </div>
         
             <!-- Linha 3 -->
             <div class="row">
-                <div class="key" onclick="playKeyboardSound()">Z</div>
-                <div class="key" onclick="playKeyboardSound()">X</div>
-                <div class="key" onclick="playKeyboardSound()">C</div>
-                <div class="key" onclick="playKeyboardSound()">V</div>
-                <div class="key" onclick="playKeyboardSound()">B</div>
-                <div class="key" onclick="playKeyboardSound()">N</div>
-                <div class="key" onclick="playKeyboardSound()">M</div>
-                <div class="key wide" onclick="playKeyboardSound()">ENTER</div>
+                <div class="key" onclick="somTecla()">Z</div>
+                <div class="key" onclick="somTecla()">X</div>
+                <div class="key" onclick="somTecla()">C</div>
+                <div class="key" onclick="somTecla()">V</div>
+                <div class="key" onclick="somTecla()">B</div>
+                <div class="key" onclick="somTecla()">N</div>
+                <div class="key" onclick="somTecla()">M</div>
+                <div class="key wide" onclick="somTecla()">ENTER</div>
             </div>
         </div>
 
-        <!-- Som do teclado-->
-        <script src="./JavaScript/keyboardSound.js"></script>
+
+        <!-- Som do teclado -->
+        <script src="./JavaScript/functions/somTecla.js"></script>
+
+        <!-- Detectar input do teclado -->
+         <script src="./JavaScript/functions/apertarTecla.js"></script>
+
     </div>
 </body>
 </html>
