--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Wordle-PtBR</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="programa-principal">
@@ -108,13 +111,16 @@
             </div>
         </div>
 
-        
+
         <!-- Som do teclado -->
         <script src="./JavaScript/functions/somTecla.js"></script>
 
+        <!-- Detectar input dos cliques -->
+        <script src="./JavaScript/functions/mostrarTeclaNaTela.js"></script>
+
         <!-- Detectar input do teclado -->
-         <script src="./JavaScript/functions/apertarTecla.js"></script>
-        
+        <script type="module" src="./JavaScript/functions/apertarTecla.js"></script>
+
     </div>
 </body>
 </html>
