Detectando input de Backspace

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="key" onclick="inputTecladoVirtual('J')">J</div>
                 <div class="key" onclick="inputTecladoVirtual('K')">K</div>
                 <div class="key" onclick="inputTecladoVirtual('L')">L</div>
-                <div class="key wide" onclick="inputTecladoVirtual('')">⌫</div>
+                <div class="key wide" onclick="inputTecladoVirtual('Backspace')">⌫</div>
             </div>
         
             <!-- Linha 3 -->
