Script para obter palavra aleatória carregado

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
         <div id="jogo">
             <div class="grid">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+                <div class="grid-item enabled"></div>
+                <div class="grid-item enabled"></div>
+                <div class="grid-item enabled"></div>
+                <div class="grid-item enabled"></div>
+                <div class="grid-item enabled"></div>
                 
                 <div class="grid-item disabled"></div>
                 <div class="grid-item disabled"></div>
@@ -120,6 +120,8 @@
         <!-- Detectar input do teclado físico -->
         <script type="module" src="./JavaScript/functions/inputTecladoFisico.js"></script>
 
+        <!-- Gerar palavra a ser adivinhada -->
+        <script type="module" src="./JavaScript/obterPalavra.js"></script>
     </div>
 </body>
 </html>
