Botão Enter funcionando

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="key" onclick="inputTecladoVirtual('B')">B</div>
                 <div class="key" onclick="inputTecladoVirtual('N')">N</div>
                 <div class="key" onclick="inputTecladoVirtual('M')">M</div>
-                <div class="key wide" onclick="inputTecladoVirtual('')">ENTER</div>
+                <div class="key wide" onclick="inputTecladoVirtual('Enter')">ENTER</div>
             </div>
         </div>
 
@@ -121,7 +121,7 @@
         <script type="module" src="./JavaScript/functions/inputTecladoFisico.js"></script>
 
         <!-- Gerar palavra a ser adivinhada -->
-        <script type="module" src="./JavaScript/obterPalavra.js"></script>
+        <script type="module" src="./JavaScript/functions/obterPalavraAleatoria.js"></script>
     </div>
 </body>
 </html>
