Trocando nome da div para "feedback"

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
 
         <div id="jogo">
-            <div class="palavra-nao-encontrada">
+            <div class="feedback">
                 <p>Palavra inválida</p>
             </div>
             
