Importando biblioteca qua lança confetes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
-<body>
     <div id="programa-principal">
 
         <div id="header">
@@ -132,6 +131,12 @@
 
         <!-- Gerar palavra a ser adivinhada -->
         <script type="module" src="./JavaScript/functions/obterPalavraAleatoria.js"></script>
+
+        <!-- Import biblioteca de animação de confetes -->
+        <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
+        <!-- Criar método que lança os confetes quando é chamado -->
+        <script type="module" src="./JavaScript/functions/confetti.js"></script>
     </div>
 </body>
 </html>
