--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&family=Maven+Pro:wght@400..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 
 <body class="flexbox">
@@ -182,6 +176,11 @@
                 <li class="flexbox tecla tecla-enter" onclick="inputTecladoVirtual('Enter')">ENTER</li>
             </ul>
         </div>
+
+        <footer class="flexbox">
+            <p>Acesse o código fonte no perfil do desenvolvedor</p>
+            <a href="https://github.com/zHenryTM" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+        </footer>
     </div>
     <!-- FIM ELEMENTOS PRINCIPAIS DO JOGO - CABEÇALHO, GRIDS E TECLADO VIRTUAL -->
 
