--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         <footer class="flexbox">
             <p>Acesse o código fonte no perfil do desenvolvedor</p>
-            <a href="https://github.com/zHenryTM" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/zHenryTM/wordle-ptbr" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
         </footer>
     </div>
     <!-- FIM ELEMENTOS PRINCIPAIS DO JOGO - CABEÇALHO, GRIDS E TECLADO VIRTUAL -->
